[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Aaron Gebremaraim <mulabr673@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
flask-httpauth = "^4.8.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
